[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Images/Trivia/Fondo casas del caribe.png" type="Texture" id=1]
[ext_resource path="res://Assets/Images/Trivia/ruleta.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/Trivia/girar ruleta.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Games/Trivia/Trivia.gd" type="Script" id=4]
[ext_resource path="res://Assets/Images/Trivia/Encabezado geograf√≠a.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/illea.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/Trivia/Tabla de preguntas.png" type="Texture" id=7]
[ext_resource path="res://Assets/Fonts/Marujo.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Assets/Images/Trivia/Tabla de respuestas.png" type="Texture" id=9]
[ext_resource path="res://Assets/Fonts/Trivia.tres" type="DynamicFont" id=10]
[ext_resource path="res://Assets/Images/Trivia/Respuesta acertada.png" type="Texture" id=11]
[ext_resource path="res://Scenes/Pause/PauseMenu.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Utility/Contador.tscn" type="PackedScene" id=13]
[ext_resource path="res://Assets/Sounds/Sunken-City.ogg" type="AudioStream" id=14]

[sub_resource type="Animation" id=5]
resource_name = "Correct"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("../Geografia/Correct:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("../Geografia/CorrectTitle:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -800, -0.25, 0, 0.25, 0, 1600, -0.25, 0, 0.25, 0, 1600, -0.25, 0, 0.25, 0, 4000, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 1.5, 2.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("../Geografia/CorrectTitle:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 900, -0.25, 0, 0.25, 0, 900, -0.25, 0, 0.25, 0, 900, -0.25, 0, 0.25, 0, 900, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 1.5, 2.5 )
}

[sub_resource type="Animation" id=3]
resource_name = "Geografia"
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("../Geografia:modulate:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("../Geografia:modulate:g")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("../Geografia:modulate:b")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("../Geografia:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/8/type = "value"
tracks/8/path = NodePath("../Geografia/Correct:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("../Geografia/CorrectTitle:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:modulate:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:modulate:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath(".:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("../Geografia:modulate:r")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("../Geografia:modulate:g")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("../Geografia:modulate:b")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("../Geografia:modulate:a")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/9/type = "value"
tracks/9/path = NodePath("../Geografia/Correct:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("../Geografia/CorrectTitle:position:x")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray( -800, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/11/type = "bezier"
tracks/11/path = NodePath("../Geografia/CorrectTitle:position:y")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PoolRealArray( 900, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/12/type = "value"
tracks/12/path = NodePath("../Geografia/CorrectTitle:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("../Geografia:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "Roulette"
length = 3.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 850, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Geografia:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="DynamicFont" id=4]
size = 250
outline_size = 8
outline_color = Color( 0.101961, 0.788235, 0.129412, 1 )
font_data = ExtResource( 8 )

[node name="Trivia" type="Node2D"]
script = ExtResource( 4 )

[node name="Contador" parent="." instance=ExtResource( 13 )]
z_index = 1

[node name="PauseMenu" parent="." instance=ExtResource( 12 )]
position = Vector2( 3200, 1750 )

[node name="BgImage" type="Sprite" parent="."]
scale = Vector2( 1, 1.3 )
texture = ExtResource( 1 )
centered = false

[node name="Roulette" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Roulette"]
position = Vector2( 1600, 900 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="BtnLoop" type="TextureButton" parent="Roulette"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1380.0
margin_top = 640.0
margin_right = -668.0
margin_bottom = 107.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Roulette"]
anims/Correct = SubResource( 5 )
anims/Geografia = SubResource( 3 )
anims/RESET = SubResource( 1 )
anims/Roulette = SubResource( 2 )

[node name="Timer" type="Timer" parent="Roulette"]
one_shot = true

[node name="Geografia" type="Node2D" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )

[node name="Title" type="Sprite" parent="Geografia"]
position = Vector2( -13, -23 )
scale = Vector2( 0.572, 0.6 )
texture = ExtResource( 5 )
centered = false

[node name="Illea" type="Sprite" parent="Geografia"]
position = Vector2( 2800, 1150 )
texture = ExtResource( 6 )

[node name="Question" type="Sprite" parent="Geografia"]
position = Vector2( 1200, 500 )
scale = Vector2( 0.4, 0.3 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Geografia/Question"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -4796.0
margin_top = -955.5
margin_right = -892.0
margin_bottom = -704.5
custom_fonts/font = ExtResource( 10 )
text = "¬øcU√ÅNTOS OCEANOS HAY EN LA TIERRA?"
align = 1
valign = 1

[node name="Answers" type="Sprite" parent="Geografia"]
position = Vector2( 1200, 1100 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="BtnIncorrect1" type="TextureButton" parent="Geografia/Answers"]
anchor_right = 1.0
margin_left = -1536.0
margin_top = -604.0
margin_right = -2068.0
margin_bottom = -268.0

[node name="Label" type="Label" parent="Geografia/Answers/BtnIncorrect1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 10 )
text = "6"
align = 1
valign = 1

[node name="BtnIncorrect2" type="TextureButton" parent="Geografia/Answers"]
anchor_right = 1.0
margin_left = -1536.0
margin_top = 266.0
margin_right = -2068.0
margin_bottom = 592.0

[node name="Label" type="Label" parent="Geografia/Answers/BtnIncorrect2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 10 )
text = "8"
align = 1
valign = 1

[node name="BtnCorrect" type="TextureButton" parent="Geografia/Answers"]
anchor_right = 1.0
margin_left = -1536.0
margin_top = -160.0
margin_right = -2068.0
margin_bottom = 160.0

[node name="Label" type="Label" parent="Geografia/Answers/BtnCorrect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 10 )
text = "5"
align = 1
valign = 1

[node name="Correct" type="Sprite" parent="Geografia"]
position = Vector2( 1200, 1094 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )

[node name="Label" type="Label" parent="Geografia/Correct"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1800.0
margin_top = -281.0
margin_right = -1800.0
margin_bottom = -281.0
custom_fonts/font = ExtResource( 10 )
text = "5"
align = 1
valign = 1

[node name="CorrectTitle" type="Sprite" parent="Geografia"]
visible = false
position = Vector2( -800, 900 )

[node name="Label" type="Label" parent="Geografia/CorrectTitle"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -555.5
margin_top = -125.5
margin_right = 555.5
margin_bottom = 125.5
custom_fonts/font = SubResource( 4 )
text = "¬°cORRECTO!"
align = 1
valign = 1

[node name="BgSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
autoplay = true

[connection signal="pressed" from="Roulette/BtnLoop" to="." method="_on_BtnLoop_pressed"]
[connection signal="animation_finished" from="Roulette/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Roulette/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Geografia/Answers/BtnCorrect" to="." method="_on_BtnCorrect_pressed"]
